# galileo-tooling

./: .gitignore  AGENTS.md  README.md  env.sample  setup.sh
bots/astra/: .gitignore  README.md
bots/astra/deployment/: _helpers.py  build_and_push.py  deploy.py  provision_infra.py  provision_secrets.py
bots/astra/gateway/: Dockerfile  pyproject.toml
bots/astra/gateway/src/astra_gateway/: app.py  auth.py  dispatch.py  enqueue.py  webhook.py
bots/astra/gateway/tests/: test_auth.py  test_dispatch.py  test_enqueue.py  test_webhook.py
bots/astra/job/: .dockerignore  Dockerfile  README.md  pyproject.toml
bots/astra/job/src/astra/: __init__.py  cli.py
bots/astra/job/src/astra/commands/: review.py
bots/astra/job/src/astra/github/: __init__.py  api.py  auth.py  clone.py  fetcher.py
bots/astra/job/src/astra/shortcut/: api.py
bots/astra/job/src/astra/skills/: loader.py  review.md
bots/astra/job/src/astra/workflows/: review.py
bots/astra/job/tests/: test_parsers.py
bots/astra/shared/: pyproject.toml
bots/astra/shared/src/astra_shared/: github_auth.py
mcp/: logzio.md  mcp.template.json  sentry.md  slack.md
scripts/: collect-tokens.sh  configure-claude.sh  generate-mcp.sh  install-skills.sh
skills/: package.json
skills/skills/draft-rfc/: SKILL.md
skills/skills/draft-rfc/assets/: backend.md  template.md
skills/skills/remediate-cves/: SKILL.md
skills/skills/rfc-to-tickets/: SKILL.md
